--- a/main.yml
+++ b/main.yml
@@ -7,6 +7,7 @@
     gecko_version: "0.18.0"
     chromedriver_version: "2.30"
     bitbar_version: "1.9.2"
+    homebrew_api_token: "{{ lookup('file', 'homebrew_token')}}"
   tasks:
     - set_fact: user="{{ lookup('env', 'USER')}}"
       tags: always
