lein and git added to homebrew package list

--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -12,6 +12,8 @@
     - fontconfig
     - coreutils
     - imagemagick
+    - leiningen
+    - git
   tags: brew
 
 - name: Install coreutils via brew
