--- a/tasks/chromedriver.yml
+++ b/tasks/chromedriver.yml
@@ -4,10 +4,12 @@
   get_url:
     url: "https://chromedriver.storage.googleapis.com/{{ chromedriver_version }}/chromedriver_mac64.zip"
     dest: /tmp/chromedriver_v{{ chromedriver_version }}.zip
+  tags: chromedriver
 
 - name: Unzip geckodriver to ~/bin
   unarchive:
     src: /tmp/chromedriver_v{{ chromedriver_version }}.zip
     dest: /Users/{{ user }}/bin/
     remote_src: yes
+  tags: chromedriver
 
