--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -2,27 +2,12 @@
 
 - name: Install homebrew packages
   homebrew: name={{ item }} state=present
-  with_items:
-    - openssl
-    - mongodb@3.4
-    - autojump
-    - git-flow-avh
-    - graphviz
-    - freetype
-    - fontconfig
-    - coreutils
-    - imagemagick
-    - leiningen
-    - git
-    - node
+  with_items: "{{ brew_packages }}"
   tags: brew
 
 - name: Install coreutils via brew
   homebrew: name={{ item }} state=present
-  with_items:
-    - grep
-    - gnu-tar
-    - ripgrep
+  with_items: "{{ brew_coreutils }}"
   tags:
    - brew
    - coreutils
@@ -39,22 +24,7 @@
   command: brew cask install {{ item }}
   register: cask_install
   changed_when: '"already installed" not in cask_install.stderr'
-  with_items:
-    - google-chrome
-    - firefox
-    - java8
-    - spotify
-    - pgAdmin4
-    - slack
-    - sourcetree
-    - p4merge
-    - kdiff3
-    - thunderbird
-    - virtualbox
-    - vagrant
-    - vagrant-manager
-    - iterm2
-    - intellij-idea-ce
+  with_items: "{{ brew_casks }}"
   tags:
     - brew
     - brew-cask
@@ -69,8 +39,7 @@
 
 - name: Start services via homebrew-services
   command: brew services start {{item}}
-  with_items:
-    - mongodb@3.4
+  with_items: "{{ brew_services }}"
   register: services_start
   changed_when: '"already started" not in services_start.stdout'
   tags:
