--- a/tasks/pip.yml
+++ b/tasks/pip.yml
@@ -11,4 +11,5 @@
     - { name: robotframework-debuglibrary, version: 1.1.2 }
     - { name: cryptography }
     - { name: netaddr }
+    - { name: apache-libcloud }
   tags: pip
