--- a/main.yml
+++ b/main.yml
@@ -33,6 +33,8 @@
     - import_tasks: tasks/fonts.yml
     - import_tasks: tasks/bitbar.yml
     - import_tasks: tasks/scripts.yml
+    - import_tasks: tasks/fzf.yml
+      tags: fzf
     - import_tasks: tasks/geckodriver.yml
       tags: geckodriver
     - import_tasks: tasks/chromedriver.yml
