--- a/tasks/pip.yml
+++ b/tasks/pip.yml
@@ -2,7 +2,7 @@
 - name: Install pip packages
   become: no
   pip: name="{{ item.name }}" version="{{ item.version | default(omit) }}" extra_args="--user"  use_mirrors=no
-  with_items:
+  loop:
     - { name: powerline-status }
     - { name: thefuck }
     - { name: awscli }
@@ -18,6 +18,7 @@
     - { name: google-auth }
     - { name: openshift }
     - { name: docker }
+    - { name: git-of-theseus }
   tags: pip
 
 - name: Check Python3 version
