--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -2,5 +2,7 @@
   lineinfile:
     dest: /etc/hosts
     line: "127.0.0.1       localhost lupapiste.local"
-  tags: etc_hosts
   become: yes
+  tags:
+    - etc_hosts
+    - sudo
