--- a/tasks/pip.yml
+++ b/tasks/pip.yml
@@ -8,7 +8,7 @@
 
 - name: Install pip user packages
   become: no
-  pip: name="{{ item.name }}" version="{{ item.version | default(omit) }}" extra_args="--user"  use_mirrors=no
+  pip: name="{{ item.name }}" version="{{ item.version | default(omit) }}" extra_args="--user"
   loop:
     - { name: powerline-status }
     - { name: thefuck }
