--- a/tasks/oh-my-zsh.yml
+++ b/tasks/oh-my-zsh.yml
@@ -22,7 +22,9 @@
   git:
     repo: https://github.com/romkatv/powerlevel10k.git
     dest: /Users/{{ user }}/.oh-my-zsh/custom/themes/powerlevel10k
-  tags: zsh
+  tags: 
+    - zsh
+    - p10k
 
 - name: Set Homebrew zsh as default shell
   become: yes
