--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -4,11 +4,13 @@
   command: python3 --version
   register: python_version_string
   tags: always
+  check_mode: no
 
 - name: Python3 user site location
   command: python3 -m site --user-site
   register: python_user_site
   tags: always
+  check_mode: no
 
 - set_fact:
     python_version_full: "{{ python_version_string.stdout | regex_replace('^Python (\\d\\.\\d\\.\\d)', '\\1') }}"
