--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -16,21 +16,24 @@
     dest: "{{ nvim_data_dir }}/site/pack/paqs/start/paq-nvim"
     depth: 1
 
-- name: vimrc
-  template: src=init.vim.j2 dest="{{ nvim_config_dir }}/init.vim"
+- name: vimrc symlink 
+  file: 
+    src:  "{{ playbook_dir }}/files/init.vim"
+    dest: "{{ nvim_config_dir }}/init.vim"
+    state: link
   tags:
     - vimrc
 
 - name: plugins.lua
-  template: src=plugins.lua.j2 dest="{{ nvim_config_dir }}/lua/plugins.lua"
+  template: src=plugins.lua.j2 dest="{{ nvim_lua_dir }}/plugins.lua"
   tags: vimrc
 
 
-- name: Install plugins
-  command: nvim --headless -u NONE -c 'lua require("plugins")'
-  register: install
-  changed_when: "install.stderr != ' Paq: Nothing to install'"
-  tags: vimrc
+# - name: Install plugins
+#   command: nvim --headless -u NONE -c 'lua require("plugins")'
+#   register: install
+#   changed_when: "install.stderr != ' Paq: Nothing to install'"
+#   tags: vimrc
 
 - debug: var=install
 
