--- a/main.yml
+++ b/main.yml
@@ -15,6 +15,8 @@
     xdg_config_home: ~/.config
   vars_files:
     - vars/secrets
+  pre_tasks:
+    - import_tasks: tasks/python.yml
   tasks:
     - debug: var=user
       tags: always
@@ -27,9 +29,7 @@
     - name: ~/Applications
       file: path="/Users/{{ user }}/Applications" state=directory mode=0755
 
-    - import_tasks: tasks/python.yml
     - import_tasks: tasks/pip.yml
-    - import_tasks: tasks/oh-my-zsh.yml
     - import_tasks: tasks/homebrew.yml
     - import_tasks: tasks/nvm.yml
       tags: nvm
@@ -54,6 +54,8 @@
     - import_tasks: tasks/alacritty.yml
       tags: alacritty
   roles:
+    - role: zsh
+      tags: zsh
     - role: aws-profile
       tags: aws
     - role: nvim
