--- a/main.yml
+++ b/main.yml
@@ -29,8 +29,11 @@
     - name: ~/Applications
       file: path="/Users/{{ user }}/Applications" state=directory mode=0755
 
+    - import_tasks: tasks/asdf.yml
+      tags: asdf
     - import_tasks: tasks/pip.yml
     - import_tasks: tasks/homebrew.yml
+      tags: homebrew
     - import_tasks: tasks/java.yml
       tags: java
     - import_tasks: tasks/nvm.yml
