--- a/tasks/pip.yml
+++ b/tasks/pip.yml
@@ -1,24 +1,20 @@
 ---
 
-#- name: Install pip global packages
-#  become: no
-#  pip: name="{{ item.name }}" version="{{ item.version | default(omit) }}" use_mirrors=no
-#  loop:
-#  tags: pip
-
 - name: Install pip user packages
   become: no
   pip: name="{{ item.name }}" version="{{ item.version | default(omit) }}" extra_args="--user"
   loop:
-    - { name: powerline-status }
+#    - { name: powerline-status }
+# https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html#adding-ansible-command-shell-completion
+    - { name: argcomplete }
     - { name: thefuck }
     - { name: cryptography }
     - { name: netaddr }
     - { name: apache-libcloud }
     - { name: pycrypto }
     - { name: requests }
-    - { name: google-auth }
-    - { name: openshift }
-    - { name: docker }
-    - { name: git-of-theseus }
+#    - { name: google-auth }
+#    - { name: openshift }
+#    - { name: docker }
+#    - { name: git-of-theseus }
   tags: pip
