--- a/tasks/nvm.yml
+++ b/tasks/nvm.yml
@@ -9,21 +9,22 @@
   tags: nvm
 
 # NVM to .zshenv for compability https://github.com/SublimeLinter/SublimeLinter3/issues/128
-- name: Ensure NVM_DIR to .zshenv
-  lineinfile: path="/Users/{{ user }}/.zshenv" regexp='^export NVM_DIR=' line='export NVM_DIR="/Users/{{ user }}/.nvm"'
-  tags:
-    - zshrc
-    - nvm
+# TODO: removed zshenv for now, should this be added still?
+#- name: Ensure NVM_DIR to .zshenv
+#  lineinfile: path="/Users/{{ user }}/.zshenv" regexp='^export NVM_DIR=' line='export NVM_DIR="/Users/{{ user }}/.nvm"'
+#  tags:
+#    - zshrc
+#    - nvm
 
-- name: Source nvm from ~/.zshenv
-  lineinfile:
-    path: "/Users/{{ user }}/.zshenv"
-    regexp: '^\. "\/usr\/local\/opt\/nvm\/nvm.\sh"'
-    insertafter: '^export NVM_DIR='
-    line: '. "/usr/local/opt/nvm/nvm.sh"'
-  tags:
-    - zshrc
-    - nvm
+#- name: Source nvm from ~/.zshenv
+#  lineinfile:
+#    path: "/Users/{{ user }}/.zshenv"
+#    regexp: '^\. "\/usr\/local\/opt\/nvm\/nvm.\sh"'
+#    insertafter: '^export NVM_DIR='
+#    line: '. "/usr/local/opt/nvm/nvm.sh"'
+#  tags:
+#    - zshrc
+#    - nvm
 
 - name: Default NPM packages
   template:
