--- a/main.yml
+++ b/main.yml
@@ -65,6 +65,7 @@
     - import_tasks: tasks/nvm.yml
       tags: nvm
     - import_tasks: tasks/pip.yml
+      tags: pip
     - import_tasks: tasks/scripts.yml
     - import_tasks: tasks/tinkey.yml
       tags: tinkey
