--- a/tasks/alacritty.yml
+++ b/tasks/alacritty.yml
@@ -1,11 +1,9 @@
 ---
 
 - name: brew install --cask alacritty
-  homebrew: name=alacritty state=present install_options=cask
-  register: cask_install
-  changed_when: '"already installed" not in cask_install.msg'
-  failed_when: '"installed" not in cask_install.msg'
-
+  community.general.homebrew_cask:
+    name: alacritty 
+    state: present
 
 - name: alacritty config file
   copy: src=files/alacritty.yml dest="{{ xdg_config_home }}/alacritty.yml"
