--- a/files/bat.config
+++ b/files/bat.config
@@ -17,6 +17,8 @@
 # enable mouse scrolling support in `bat` when running inside tmux. This might
 # disable text selection, unless you press shift.
 #--pager="less --RAW-CONTROL-CHARS --quit-if-one-screen --mouse"
+# Use less, until moar has added --quit-if-one-screen support: https://github.com/walles/moar/issues/113
+--pager="less"
 
 # Syntax mappings: map a certain filename pattern to a language.
 #   Example 1: use the C++ syntax for Arduino .ino files
